# duckdb-postgis

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: testing_action.yml
duckdb_postgis/: __init__.py  duckdb_postgis_test.py
src/: duckdb_postgis.rs  lib.rs  main.rs
src/duckdb_load/: core_processor.rs  duckdb_load.rs  geo_strategy.rs  mod.rs  non_geo_strategy.rs  postgis_processor.rs
src/file_load/: mod.rs
test_files/: invalid.txt  london-reservoir-levels.xlsx
tests/: duckdb_tests.rs
