[package]
name = "duckdb-postgis"
version = "0.1.11"
edition = "2021"
authors = ["chris@enmeshed.dev", "serj@enmeshed.dev"]
description = "A library for transforming geospatial data using DuckDB and ingesting it into a PostGIS database."
license = "MIT"
repository = "https://github.com/enmeshed-analytics/duckdb-gridwalk"
homepage = "https://github.com/enmeshed-analytics/duckdb-gridwalk"
keywords = ["duckdb", "data-transformation", "postgis", "geospatial"]

[lib]
name = "duckdb_postgis"
crate-type = ["cdylib", "rlib"]

[dependencies]
duckdb = { version = "1.2.0", features = ["bundled"] }
lexical-core = "1.0.5"
zip = "2.2.2"

[dependencies.pyo3]
git = "https://github.com/pyo3/pyo3"
version = "0.23.5"

[features]
extension-module = ["pyo3/extension-module"]

