[package]
name = "duckdb-postgis"
version = "0.2.5"
edition = "2021"
authors = ["chris@enmeshed.dev", "serj@enmeshed.dev"]
description = "A library for transforming geospatial data using DuckDB and ingesting it into a PostGIS database."
license = "MIT"
repository = "https://github.com/enmeshed-analytics/duckdb-gridwalk"
homepage = "https://github.com/enmeshed-analytics/duckdb-gridwalk"
keywords = ["duckdb", "data-transformation", "postgis", "geospatial"]

[lib]
name = "duckdb_postgis"
crate-type = ["rlib"]

[dependencies]
duckdb = { version = "1.3.1", features = ["bundled"] }
lexical-core = "1.0.5"
tempfile = "3.20.0"
zip = "4.2.0"
